2006-07-14  Johannes Schmid <jhs@cvs.gnome.org>
	
	* configure.in: Check for C/C++-Compiler correctly

2006-07-14  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/debug-manager/stack_trace.c:
	Destroy stack window when debuuger is disabled (#347414)
	
	* plugins/sourceview/anjuta-view.c:
	Fix a crash with popup-menu (#347412)

2006-07-13 Naba Kumar  <naba@gnome.org>

	* plugins/editor/Makefile.am,
	plugins/editor/text_editor.h,
	plugins/editor/text-editor-iterable.h,
	plugins/editor/text-editor-iterable.c: Implemented text iterator (not
	tested yet).
	
	* plugins/language-support-cpp-java/plugin.c: Preliminary indentation
	code.
	
	* plugins/sourceview/sourceview-cell.c: Fixed a leak.

2006-07-03  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/editor/text_editor.c: (convert_to_utf8_from_charset):
	Bug #342937
	
2006-07-03  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/document-manager/anjuta-docman.c:
	* src/anjuta-app.c:
	makes Anjuta display dock_items which have previously been hidden

2006-07-03  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/debug-manager/breakpoints.c: (on_clear_all_breakpoints):
	* plugins/sourceview/sourceview.c: (imark_unmark):
	
	Patches for bugs #346450 and #346295
	
	* AUTHORS: Added Fredrik

2006-06-18 Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/message-view/anjuta-msgman.c: 
	Fixed close button/icon size (like in docman)

2006-06-10 Naba Kumar <naba@gnome.org>

	* plugins/editor/text_editor.c: Fixed goto line to mark the line
	being set.
	
2006-06-10 Sebastien Granjoux <seb.sfo@free.fr>

	* libanjuta/interfaces/libanjuta.idl:
	Move inspect_memory function in IAnjutaCpuDebugger interface
	Rename Boolean type to State

	* plugins/debug-manager/breakpoint.c:
	Rename Boolean type to State

	* plugins/debug-manager/Makefile.am,
	plugins/debug-manager/anjuta-marshal.list,