@@ -1,3 +1,11 @@
+2006-07-20  Johannes Schmid <jhs@cvs.gnome.org>
+
+	* plugins/sourceview/sourceview.c: Added support for IAnjutaEditorLanguage
+	(automatic does not work, same with scintilla editor)
+
+	* plugins/sourceview/anjuta-view.c:
+	Patch from Fredrik Axelsson <fraxbe@gmail.com> to fix a popup-menu issue
+
 2006-07-14  Johannes Schmid <jhs@cvs.gnome.org>
 	
 	* configure.in: Check for C/C++-Compiler correctly
